Criacao das Entidades , Enums e DbSet

--- a/CpmPedidos/CmpPedidos.Api/CmpPedidos.Api.csproj
+++ b/CpmPedidos/CmpPedidos.Api/CmpPedidos.Api.csproj
@@ -1,7 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CmpPedidos.Domain\CmpPedidos.Domain.csproj" />
+    <ProjectReference Include="..\CmpPedidos.Interfaces\CmpPedidos.Interface.csproj" />
+    <ProjectReference Include="..\CmpPedidos.Reposiotry\CmpPedidos.Reposiotry.csproj" />
+  </ItemGroup>
 
 </Project>
