--- a/CpmPedidos/CmpPedidos.Api/appsettings.json
+++ b/CpmPedidos/CmpPedidos.Api/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "App": "Server=localhost; Database=CmpPedidos;User Id=postgres; Password=jp112233"
+  }
 }
